--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,3 +3,7 @@ micronaut:
     name: pixRest
   server:
     port: ${SERVER_PORT:8080}
+
+jackson:
+  serialization:
+    writeDatesAsTimestamps: false
